--- a/index.html
+++ b/index.html
@@ -36,21 +36,62 @@
      <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-sm-6 flex-first">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-sm align-self-center">
+                <div class="col col-sm align-self-center">
 				    <img src="img/logo.png" class="img-fluid">
 				</div>
-				<div class="col-sm align-self-center">
-				    <button type="button" class="btn btn-warning btn-sm" onclick="location.href='#reserve';" style="width:250px;height:30px;">Reserve a Table</button>
+				<div class="col-12 col-sm align-self-center">
+				    <a role="button" class="btn btn-block btn-sm nav-link btn-warning" href="#reserveform">Reserve a Table</a>
 				</div>
             </div>
         </div>
     </header>
 
     <div class="container">
+	    <div class="row row-content">
+		   <div class="col">
+              <div id="mycarousel" class="carousel slide" data-ride="carousel">
+			     <div class="carousel-inner" role="listbox">
+				   <div class="carousel-item active">
+				     <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+					 <div class="carousel-caption d-none d-md-block">
+					    <h2>Uthappizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                        <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+					 </div>
+				   </div>
+				   <div class="carousel-item">
+					   <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+					   <div class="carousel-caption d-none d-md-block">
+					      <h2>Weekend Grand Buffet<span class="badge badge-danger">New</span></h2>
+                          <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+					   </div>
+				   </div>
+				   <div class="carousel-item">
+				       <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+					   <div class="carousel-caption d-none d-md-block">
+					       <h2>Alberto Somayya</h2>
+                           <h4>Executive Chef</h4>
+                           <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+					   </div>
+                   </div>
+                 </div>
+				 <ol class="carousel-indicators">
+				    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#mycarousel" data-slide-to="1"></li>
+					<li data-target="#mycarousel" data-slide-to="2"></li>
+				 </ol>
+				 <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                 </a>
+                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                 </a>
+			  </div>
+		   </div>
+		</div>
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -98,7 +139,7 @@
 			</div>
         </div>
 	
-		<div class="row row-content align-items-center" id="reserve">
+		<div class="row row-content align-items-center" id="reserveform">
 		   <div class="col-12 col-md-8 offset-md-2">
 		      <div class="card">
 			     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
