--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
 				<span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+				<!--data-attribute has been removed-->
+                    <a id="loginbtn">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>
 	      </div>  
@@ -81,12 +82,13 @@
 				    <img src="img/logo.png" class="img-fluid">
 				</div>
 				<div class="col-12 col-sm align-self-center">
-				    <a role="button" data-toggle="modal" data-target="#ReserveModal" class="btn btn-block btn-sm nav-link btn-warning" href="#reserveform">Reserve a Table</a>
+				<!---data-attribute as been removed-->
+				    <a role="button" id="reservebtn" class="btn btn-block btn-sm nav-link btn-warning" href="#reserveform">Reserve a Table</a>
 				</div>
             </div>
         </div>
     </header>
-	<div id="ReserveModal" class="modal fade" role="dialog">
+	<div id="reserveform" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content" style="width:600px;">
           <!-- Modal content-->
           <div class="modal-content">
@@ -97,8 +99,8 @@
             <div class="modal-body">
                   <form>
 			         <div class="form-group row">
-				        <label for="noofguests" class="col-md-2 col-form-label">Number of Guests</label>
-					    <div class="col-md-10">
+				        <label for="noofguests" class="col-sm-3 col-form-label">Number of Guests</label>
+					    <div class="col-sm-9">
 						     <label class="radio-inline">
                              <input type="radio" name="optradio">1
                              </label>
@@ -262,7 +264,7 @@
 				</div>
 			</div>
         </div>
-	
+	<!--created a modal
 		<div class="row row-content align-items-center" id="reserveform">
 		   <div class="col-12 col-md-8 offset-md-2">
 		      <div class="card">
@@ -317,6 +319,7 @@
 			  </div>
            </div>
         </div>
+		endoftheModal-->
     </div>
 
     <footer class="footer">
